employees-webapp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: employees-webapp-deployment
spec:
    replicas: 1
    selector:
        matchLabels:
            component: employees-webapp
    template:
        metadata:
            labels:
                component: employees-webapp
        spec:
            containers:
                - name: employees-webapp
                  image: mmbarek/employees-webapp
                  ports:
                    - containerPort: 80
