ingress-service.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    # UPDATE THIS LINE ABOVE
spec:
  rules:
    - http:
        paths:
          - path: /?(.*)
            backend:
              serviceName: employees-webapp-ip-service
              servicePort: 80 
          # ems (E)mployees (M)anagement (S)erive          
          - path: /services/ems/?(.*)
            backend:
              serviceName: employees-service-ip-service
              servicePort: 8010
          # ems (P)rojects (M)anagement (S)erive                  
          - path: /services/pms/?(.*)
            backend:
              serviceName: projects-service-ip-service
              servicePort: 8020
